# Bond-RV-App

./: .cursorignore  .cursorrules  .gitignore  CHANGELOG.md  CLAUDE.md  DOCUMENTATION_SUMMARY.txt  GIT_HOOKS_SUMMARY.md  README.md  SYNC_VERIFICATION.md  TEST_REPORT.md  Untitled-1.ipynb  cr01_comb.py  hi eddy.ipynb  monitor_outlook.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_pipeline.py  runs_miner.py  sample_notebook.html  sample_notebook.ipynb  setup_hooks.sh
.githooks/: commit-msg  pre-commit  pre-push
Documentation/: README.md
Documentation/Architecture/: bond_pipeline_documentation.md  runs_pipeline_documentation.md
Documentation/Reference/: Claude-Commands-Cheat-Sheet.md  Claude-Slash-Commands-Guide.md  DELIVERABLES.txt  Data-Distribution-Options.md  Git-Hooks-Guide.md  (+4 more)
Raw Data/: README.md
analytics/: all_comb.py  cad_cheap_vs_usd.py  cad_rich_vs_usd.py  cr01_comb.py  custom_bond_comb.py  custom_sector.py  port_comb.py  port_executable.py  runs-adjusted_ts.py  runs_today.py  term_comb.py  ticker_comb.py
bond_pipeline/: README.md  __init__.py  config.py  extract.py  load.py  pipeline.py  transform.py  utils.py
documentation/: Business_Logic_Reference.md  Data_Architecture.md  Database_Migration_Guide.md  README.md
patterns/: deep_duplicate_analysis.py
personal notes/: my to dos.md  rando.md
portfolio_pipeline/: __init__.py  extract.py  load.py  pipeline.py  transform.py
runs_pipeline/: __init__.py  extract.py  load.py  pipeline.py  transform.py
tests/: README.md  conftest.py
utils/: outlook_monitor.py
(+125 files in other folders)
